== Changelog

=== 2.25 (Planned to xx.11.2015)
* Changed license from LGPL 3.0 to MIT (less restrictive)
* #246 add method Selenide.confirm() without text parameter. Sometimes you want to just confirm without verifying text.
* #244 add property `-Dselenide.reopenBrowserOnFail=false`
* upgrade to htmlunit 2.19
 
=== 2.24 (Released 08.11.2015)
* add method $.pressEscape()
* extract code for creating WebDriver to a separate class WebDriverFactory
* #236 fix soft asserts with TestNG
* upgrade to selenium 2.48.2

=== 2.23 (Released 15.09.2015)
* add method `$.selectRadio()`
* Method `$.setValue()` can also select radio button
* #216 user cannot change value of readonly field (input, radio, checkbox, textarea)
* #215 Take into account element's "maxlength" attr for the JS value setter

=== 2.22 (Released 29.08.2015)
* #209 close browser in the same thread (without spawning a daemon thread)

=== 2.21 (Released 03.08.2015)
* Selenide now requires Java 7 or higher
* Upgrade to Selenium 2.47.1 <br>
 Release notes: https://github.com/SeleniumHQ/selenium/blob/master/java/CHANGELOG

=== 2.20 (Released to 27.07.2015)
* #195 replace System.out and System.err by java.util.logging
* #199 Use timeout (5 seconds by default) when closing/killing webdriver [by @admizh]
* #204 set timeout (15 sec) and retry (3 times) to create webdriver if first attempt failed
* Cookies are not sent in FileDownloader after httpclient update [by Philipp Kolesnikov]
* #186 Selenide page factory can inject ElementsCollection
* #134 for "select", $.getText() returns text(s) of selected option(s).
* #66 can take screenshot of a single web element
* All should-methods with "message" parameter are deprecated
* exclude cglib-nodep from Selenide dependencies

=== 2.19 (Released 21.06.2015)
* #175 Add method to switch into inner frames: `switchTo().innerFrame("parentFrame", "childFrame_2", "childFrame_2_1");`
* #164 Method `$.download()` accepts untrusted self-signed certificates