@@ -2,6 +2,7 @@
 
 === 2.25 (Planned to xx.11.2015)
 * Changed license from LGPL 3.0 to MIT (less restrictive)
+* #242 #226 add method Screenshots.getLastScreenshot()
 * #246 add method Selenide.confirm() without text parameter. Sometimes you want to just confirm without verifying text.
 * #244 add property `-Dselenide.reopenBrowserOnFail=false`
 * upgrade to htmlunit 2.19
